# RaspberryZero2W_Test

./: README.md
Documents/: Run.sh  fix.tar
Documents/GPIO/: Build_and_Run.sh  CMakeLists.txt  main.c
Documents/I2C/: Build_and_Run.sh  CMakeLists.txt  main.c
Documents/MPU6050/: Build_and_Run.sh  CMakeLists.txt  main.c
Documents/MPU6050/mpu6050/: CMakeLists.txt  mpu6050.c  mpu6050.h
Documents/PWM/: Build_and_Run.sh  CMakeLists.txt  main.c
Documents/SPI/: Build_and_Run.sh  CMakeLists.txt  main.c
